Se agregaron las secciones de populares, recomendadas y recientes

--- a/index.html
+++ b/index.html
@@ -39,29 +39,42 @@
             <div>
                 <h1>Recetas Populares</h1>
             </div>
-            <div class="populares-container">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+            <div class="populares-slider">
+                <ul class="populares-list">
+                    <li>
+                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                    </li>                          
+                    <li>
+                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                    </li>
                 </ul>
             </div>
         </section>
         <section class="section-recetas">
             <section class="recomendadas">
                 <div>
-                    <h2>Recomendadas para ti</h2>
+                    <h2>Mas recetas</h2>
                 </div>
                 <div class="recomendadas-container">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
                     </ul>
                 </div>
             </section>
@@ -71,22 +84,66 @@
                 </div>
                 <div class="recientes-container">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
-        </section>
-
+        </section>    
     </main>
     <footer>
 
