Se actualizo el header

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
     <header class="header">
         <ul>
-            <li><img src="" alt=""></li>
-            <li><h1>NUTRIGUIA</h1></li>
-            <li><input type="text"></li>
-            <li><input type="button" value="Acceder"></li>
+            <li>
+                <div class="logo-section">
+                    <a href="/index.html"><img src="pics/Header-icon.png" alt="" class="logo"></a>
+                    <a href="/index.html"><h1>Nutriguia</h1></a>
+                </div>
+            </li>
+            <li><input type="text" class="search"></li>
+            <li><a href="/register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
         </ul>
         
     </header>
