--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Nutrigia Registro </title>
     <!-- link de css. -->
-    <link rel="stylesheet" href="./register-style.css">
+    <link rel="stylesheet" href="static/css/register-style.css">
     <!-- link de fav icon. -->
     <link rel="shortcut icon" href="./static/img/favicon.ico" type="image/x-icon">
 </head>
