Se agrego parte del fetch de la api

--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
                                 </a>
                             </div>
                         </li>
+                        <li class="item-container">
+                            <div class="content-container">
+                                <a href="">
+                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <h3>Titulo prueba</h3>
+                                </a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </section>
