se soluciono el problema con git pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
     <title>Nutriguia</title>
+    <link rel="icon" href="./pics/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <header class="header">
@@ -158,8 +160,17 @@
         </section>    
     </main>
     <footer>
-
+        <section class="footer-container">
+            <div><h3>Gracias por elegir Nutriguia</h3></div>
+            <div class="info-container">
+                <ul>
+                    <li><a href="">SOBRE NOSOTROS</a></li>
+                    <li><a href="">COPYRIGHT</a></li>
+                    <li><a href="">MAS INFO</a></li>
+                </ul>
+            </div>
+        </section>
     </footer>
-    <script src="static/js/script.js"></script>
+    <script src="./static/js/script.js"></script>
 </body>
 </html>
