se soluciono el problema con git pages x2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li>
                 <div class="logo-section">
-                    <a href="/index.html"><img src="pics/Header-icon.png" alt="" class="logo"></a>
+                    <a href="/index.html"><img src="./pics/Header-icon.png" alt="" class="logo"></a>
                     <a href="/index.html"><h1>Nutriguia</h1></a>
                 </div>
             </li>
@@ -48,19 +48,19 @@
             <div class="populares-slider">
                 <ul class="populares-list">
                     <li>
-                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>                          
                     <li>
-                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -72,15 +72,15 @@
                 </div>
                 <div class="recomendadas-container">
                     <ul>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
-                        <li><a href=""><img src="/pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
+                        <li><a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a></li>
                     </ul>
                 </div>
             </section>
@@ -93,7 +93,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -101,7 +101,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -109,7 +109,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -117,7 +117,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -125,7 +125,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -133,7 +133,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -141,7 +141,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
@@ -149,7 +149,7 @@
                         <li class="item-container">
                             <div class="content-container">
                                 <a href="">
-                                    <img src="/pics/receta-ejemplo.jpg" alt="">
+                                    <img src="./pics/receta-ejemplo.jpg" alt="">
                                     <h3>Titulo prueba</h3>
                                 </a>
                             </div>
