--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/style.css">
     <title>Nutriguia</title>
-    <link rel="icon" href="./pics/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./pics/favicon.ico">
 
 </head>
 <body>
@@ -17,8 +17,8 @@
                     <a href="/index.html"><h1>Nutriguia</h1></a>
                 </div>
             </li>
-            <li><input type="text" class="search"></li>
-            <li><a href="/register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
+            <li class="no-logo"><input type="text" class="search" placeholder="🔎 Busca recetas y mucho mas..."></li>
+            <li class="no-logo-btn"><a href="/register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
         </ul>
         
     </header>
