--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </li>
             <li class="no-logo"><input type="text" class="search" placeholder="🔎 Busca recetas y mucho mas..."></li>
-            <li class="no-logo-btn"><a href="/register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
+            <li class="no-logo-btn"><a href="./register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
         </ul>
         
     </header>
