Se soluciono el grid y se implemento la api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="/index.html"><h1>Nutriguia</h1></a>
                 </div>
             </li>
-            <li class="no-logo"><input type="text" class="search" placeholder="🔎 Busca recetas y mucho mas..."></li>
+            <li class="no-logo"><input type="text" class="search" placeholder="🔍︎   Busca recetas y mucho mas..."></li>
             <li class="no-logo-btn"><a href="./register.html"><input type="button" value="Acceder" class="login_btn"></a></li>
         </ul>
         
@@ -48,19 +48,19 @@
             <div class="populares-slider">
                 <ul class="populares-list">
                     <li>
-                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href="/recipe.html"><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href="/recipe.html"><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>                          
                     <li>
-                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href="/recipe.html"><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href="/recipe.html"><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                     <li>
-                        <a href=""><img src="./pics/receta-ejemplo.jpg" alt=""></a>
+                        <a href="/recipe.html"><img src="./pics/receta-ejemplo.jpg" alt=""></a>
                     </li>
                 </ul>
             </div>
