se solucionaron los problemas que planteo el profe, falta solucionar el responsive

--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                         Bienvenido a Nutriguia, tu pagina perfecta de recetas y nutricion, aqui vas a poder encontrar
                         la informacion necesaria para comer mejor y mas sano.
                     </p>
-                    
                 </div>
                 <div>
                     <p>¡Mejorar tu vida comienza mejorando tu forma de comer!</p>
+                </div>
+                <div>
+                    <a href="#AboutUs"><button class="AboutUs">Conocenos</button></a>
                 </div>
             </section>    
         </section>
@@ -72,6 +74,14 @@
                     </ul>
                 </div>
             </section>
+        </section>
+        <section class="auSection" id="AboutUs">
+            <div>
+                <h2>Sobre nosotros</h2>
+            </div>
+            <div class="auContainer">
+                <p>Bienvenido a Nutriguia, el lugar donde la pasión por la cocina se encuentra con la creatividad y la tradición. Somos un equipo apasionado de entusiastas culinarios y amantes de la buena comida que buscan compartir experiencias gastronómicas excepcionales. En Nutriguia, creemos que la cocina es más que una tarea diaria; es un viaje emocionante lleno de sabores, aromas y descubrimientos. Nuestra misión es inspirarte a explorar el arte de la cocina y a disfrutar de la alegría de preparar y compartir deliciosas recetas. Únete a nosotros mientras exploramos ingredientes frescos, técnicas culinarias innovadoras y, sobre todo, la alegría de crear momentos inolvidables alrededor de la mesa. ¡Bienvenidos a nuestra cocina virtual, donde cada receta cuenta una historia!</p>
+            </div>
         </section>    
     </main>
     <footer>
