se solucionaron las imagenes y los links

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <ul>
             <li>
                 <div class="logo-section">
-                    <a href="/index.html"><img src="./pics/Header-icon.png" alt="" class="logo"></a>
-                    <a href="/index.html"><h1>Nutriguia</h1></a>
+                    <a href="https://emmaakai.github.io/CaC_Nutriguia.github.io/"><img src="./pics/Header-icon.png" alt="" class="logo"></a>
+                    <a href="https://emmaakai.github.io/CaC_Nutriguia.github.io/"><h1>Nutriguia</h1></a>
                 </div>
             </li>
             <li class="no-logo"><input type="text" class="search" placeholder="🔍︎   Busca recetas y mucho mas..."></li>
