Se agrego el responsive al 767max-width

--- a/register.html
+++ b/register.html
@@ -60,6 +60,6 @@
             </section>
         </section>
     </main>
-    <script src="register-js.js"></script>
+    <script src="/static/js/register-js.js"></script>
 </body>
 </html>
